--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,4 +45,20 @@
         android:layout_height="wrap_content"
         android:text="stopserver"
         app:layout_constraintTop_toBottomOf="@+id/bottom4" />
+
+    <Button
+        android:id="@+id/bottom6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="addFragment"
+        app:layout_constraintTop_toBottomOf="@+id/bottom5" />
+
+    <FrameLayout
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
